NEW: Implement loggin system and execution listener

--- a/test/pom.xml
+++ b/test/pom.xml
@@ -103,6 +103,11 @@
             <version>${jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
